rm whitespaces, correct learnmore page

--- a/scss/helpers/_extends.scss
+++ b/scss/helpers/_extends.scss
@@ -36,15 +36,6 @@
         }
     }
 }
-.whitespace {
-	position: relative;
-	@include weth(100%, $h-white);
-	max-height: 62px;
-    background: $backgroundColor;
-	@media (max-height: $md){
-		max-height: $h-white;
-	}
-}
 a {
 	text-decoration: none;
 }
